	create a directory but not be allowed to create a .dll or .chm
	file, at least under Vista.

    o	When R_COMPLETION is set to FALSE, TAB is no longer ignored,
	but advances to the next tab stop in Rterm (the pre-2.5.0
	behaviour) and inserts a space in Rgui.


BUG FIXES

    o	Saving a plot to Postscript or PDF required the font database
	to have been initialized: this is now done if necessary.
 
		

		CHANGES IN R VERSION 2.6.0
		
GUI CHANGES

    o	The console now handles cut and paste and mouse clicks in the
	input line in a more Windows standard way.  It also indicates
	insert and overwrite mode with different cursors.


FUNCTION CHANGES

    o	embedFonts() now accepts paths in 'GS_CMD' which contain spaces.

    o	The windows() device supports semi-transparent colours under
	Windows 2000 and later, for lines, fills and text.

    o	file.info() has an additional column 'exe' saying if the file
	is executable and if so what subsystem would be used to
	execute it.
	
    o	getWindowsHandle() now returns the handle as an external pointer.
    	It no longer returns the process ID.

    o	system() (and hence shell()) now reports as the return value
	only the bottom 16 bits of process error codes to protect
	against executables with invalid error codes (such as -1 from
	fc.exe, PR#9868).
	
    o	pipe() in Rgui now runs the command through the shell specified
    	by the COMSPEC environment variable, as Rterm has always done.

    o	l10n_info() reports the codepage in current use.

    o	dQuote() and sQuote() now use directional quotes by default
	under RGui.  You might prefer options(useFancyQuotes=FALSE)
	if the console font does not have these quotes: see the
	rw-FAQ.


INSTALLER

    o	The components now have two levels, and the Tcl/Tk docs can be
	deselected independently.  Only CHM help for Tcl/Tk is shipped
	(since Winhelp does not work on Vista).


PACKAGE INSTALLATION

    o	The undocumented use of 'OBJS' in src/Makevars.win has been